update readme, python path

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,8 +1,7 @@
-[credentials]
-# credentials header must be present
-merchantAccount = TestMerchant
-wsUser = ws@Company.AdyenTechSupport
-wsPass = [Your webservice user's password]
-apiKey = [Your webservice user's API key]
+[credentials] # must be present
+merchantAccount = [Your merchant account]
+wsUser = [Your webservice user name]
+wsPass = [Your webservice user password]
+apiKey = [Your webservice user API key]
 skinCode = [SkinCode for your HPP skin]
 hmacKey = [HMAC key for your HPP skin]
