clean up 3DS pages

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,4 +1,4 @@
-[credentials] # must be present
+[credentials] # don't change this line
 merchantAccount = [Your merchant account]
 wsUser = [Your webservice user name]
 wsPass = [Your webservice user password]
