move originKey to common.js, update readme

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,7 +1,7 @@
-[credentials] # don't change this line
+[credentials]  # don't change this line
 merchantAccount = [Your merchant account]
+apiKey = [Your webservice user API key]
 wsUser = [Your webservice user name]
 wsPass = [Your webservice user password]
-apiKey = [Your webservice user API key]
-skinCode = [SkinCode for your HPP skin]
-hmacKey = [HMAC key for your HPP skin]
+skinCode = [SkinCode for your HPP skin]  # only for deprecated HPP integration
+hmacKey = [HMAC key for your HPP skin]  # only for deprecated HPP integration
